New Software updated
SplitImg updated

--- a/download/SplitImg.html
+++ b/download/SplitImg.html
@@ -4,19 +4,19 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>ImgSort Software | Creative Bytes: Unleashing Innovation with Karan Khandekar</title>
+    <title>SplitImg Software Unleashing Innovation with Karan Khandekar</title>
     <meta name="theme-color" content="#161719">
-    <link rel="canonical" href="https://karankhandekar.github.io/download/ImgSort.html">
-    <meta property="og:url" content="https://karankhandekar.github.io/download/ImgSort.html">
+    <link rel="canonical" href="https://karankhandekar.github.io/download/SplitImg.html">
+    <meta property="og:url" content="https://karankhandekar.github.io/download/SplitImg.html">
     <meta name="twitter:card" content="summary">
     <meta property="og:type" content="website">
-    <meta name="twitter:title" content="Creative Bytes: Unleashing Innovation with Karan Khandekar">
-    <meta name="twitter:description" content="Welcome to Creative Bytes, the digital realm where innovation meets creativity, curated by Karan Khandekar. Dive into a world of cutting-edge software solutions, captivating courses, and inspirational content. Join us on a journey of exploration and discovery as we push the boundaries of technology and imagination, one byte at a time.">
-    <meta property="og:description" content="Welcome to Creative Bytes, the digital realm where innovation meets creativity, curated by Karan Khandekar. Dive into a world of cutting-edge software solutions, captivating courses, and inspirational content. Join us on a journey of exploration and discovery as we push the boundaries of technology and imagination, one byte at a time.">
-    <meta property="og:title" content="Creative Bytes: Unleashing Innovation with Karan Khandekar">
-    <meta property="og:image" content="https://karankhandekar.github.io/assets/img/icons/512.jpg">
-    <meta name="twitter:image" content="https://karankhandekar.github.io/assets/img/icons/512.jpg">
-    <meta name="description" content="Welcome to Creative Bytes, the digital realm where innovation meets creativity, curated by Karan Khandekar. Dive into a world of cutting-edge software solutions, captivating courses, and inspirational content. Join us on a journey of exploration and discovery as we push the boundaries of technology and imagination, one byte at a time.">
+    <meta property="og:image" content="https://karankhandekar.github.io/assets/img/icons/app_icon.png">
+    <meta property="og:description" content="Welcome to Creative Bytes, the digital realm where innovation meets creativity, curated by Karan Khandekar. Dive into a world of cutting-edge software solutions, captivating courses, and inspirational content.">
+    <meta property="og:title" content="SplitImg Software Unleashing Innovation with Karan Khandekar">
+    <meta name="description" content="Welcome to Creative Bytes, the digital realm where innovation meets creativity, curated by Karan Khandekar. Dive into a world of cutting-edge software solutions, captivating courses, and inspirational content.">
+    <meta name="twitter:title" content="SplitImg Software Unleashing Innovation with Karan Khandekar">
+    <meta name="twitter:description" content="Welcome to Creative Bytes, the digital realm where innovation meets creativity, curated by Karan Khandekar. Dive into a world of cutting-edge software solutions, captivating courses, and inspirational content.">
+    <meta name="twitter:image" content="https://karankhandekar.github.io/assets/img/icons/app_icon.png">
     <link rel="apple-touch-icon" type="image/jpeg" sizes="180x180" href="../assets/img/icons/180.jpg">
     <link rel="icon" type="image/jpeg" sizes="16x16" href="../assets/img/icons/16.jpg">
     <link rel="icon" type="image/jpeg" sizes="16x16" href="../assets/img/icons/16.jpg" media="(prefers-color-scheme: dark)">
@@ -46,29 +46,49 @@
             </div>
         </div>
     </nav>
-    <div class="container"><img class="rounded img-fluid shadow w-100 fit-cover" src="../assets/img/products/SortImg%20Banner.png" style="height: 375px;">
+    <div class="container"><img class="rounded img-fluid shadow w-100 fit-cover" src="../assets/img/products/background.jpeg" style="height: 375px;">
         <div class="py-4"><span class="badge bg-primary mb-2">For Saks Global</span>
-            <h4 class="fw-bold">ImgSort</h4>
-            <p class="text-muted">SortImg is a handy tool designed to help you organize your image collection quickly and effortlessly. With its easy-to-use interface, SortImg lets you sort through your images with ease, whether you're a photography enthusiast, a professional designer, or just someone who loves keeping their files neat and tidy.</p>
+            <h4 class="fw-bold">Split Image</h4>
+            <p class="text-muted">SplitImg for Designers is a utility application developed for Saks Global. This tool automates the process of organizing, tagging, and distributing images among designers. It assigns color tags based on the background color of the images and ensures a smooth workflow by splitting images into designated folders for each designer.</p>
             <div class="row">
-                <div class="col d-flex justify-content-center"><a class="btn btn-primary m-2" role="button" href="saks_sort_img/dmg_download/SortImg.dmg" target="_blank">Download ImgSort (Apple Silicon)</a></div>
-                <div class="col-md-12 col-lg-6 d-flex justify-content-center"><a class="btn btn-outline-primary m-2" role="button" href="#" data-bs-target="#DocumentationSortImg" data-bs-toggle="modal">Documentation</a></div>
+                <div class="col d-flex justify-content-center"><a class="btn btn-primary m-2" role="button" href="saks_sort_img/dmg_download/SortImg.dmg" target="_blank">Download SplitImg (Apple Silicon)</a></div>
+                <div class="col-md-12 col-lg-6 d-flex justify-content-center"><a class="btn btn-outline-primary m-2" role="button" href="SplitImg/documentation.html" data-bs-target="#DocumentationSortImg" data-bs-toggle="modal">Documentation</a></div>
             </div>
-            <h4 class="fw-bold">Use Case</h4>
-            <p class="text-muted">Sorting through a large collection of images can be a daunting task, especially when you're looking for specific ones or trying to organize them neatly. That's where SortImg comes in handy! Whether you're a photography enthusiast, a designer, or just someone who wants to keep their image folders organized, SortImg simplifies the process.</p>
-            <h4 class="fw-bold">Features</h4>
+            <h4 class="fw-bold mt-4">Key Features</h4>
+            <ul class="list-group">
+                <li class="list-group-item"><span><span style="color: rgba(255, 255, 255, 0.75);">Supports multiple image formats: PNG, JPEG, BMP, GIF, TIFF</span></span></li>
+                <li class="list-group-item"><span><span style="color: rgba(255, 255, 255, 0.75);">Automatically assigns green or yellow tags based on the image's background color</span></span></li>
+                <li class="list-group-item"><span><span style="color: rgba(255, 255, 255, 0.75);">Distributes images among selected designers using a round-robin method</span></span></li>
+                <li class="list-group-item"><span><span style="color: rgba(255, 255, 255, 0.75);">Displays the number of images processed and the time taken for the task</span></span></li>
+                <li class="list-group-item"><span><span style="color: rgba(255, 255, 255, 0.75);">Simple UI for quick and efficient image sorting</span></span></li>
+            </ul>
+            <h4 class="fw-bold mt-4">How It Works</h4>
+            <p>SplitImg works by processing images in a selected folder and distributing them across multiple designer folders. The software performs the following steps:</p>
             <ol>
-                <li>Effortless Sorting: SortImg automatically categorizes images based on their background colors, saving you time and effort.</li>
-                <li>Intuitive Interface: With its user-friendly interface, SortImg is easy to navigate, even for beginners.</li>
-                <li>Quick Results: SortImg quickly processes your images, providing you with sorted folders in no time.</li>
-                <li>Apple Silicon Chip Compatibility: SortImg is optimized for Apple Silicon chips, ensuring smooth performance on compatible devices. (Note: SortImg is not compatible with Apple Intel chips.)</li>
-                <li>Customization Options: SortImg allows you to choose the destination folders for sorted images, giving you control over your file organization.</li>
-                <li><span style="color: rgba(255, 255, 255, 0.75);">Error Handling: SortImg includes error handling mechanisms to ensure smooth operation even with problematic images.</span></li>
+                <li>Image Identification: The software scans the source folder for images in supported formats (PNG, JPEG, BMP, GIF, TIFF).</li>
+                <li>Background Color Check: Each image's top-right corner is analyzed to determine if the background is white or gray. If the background is white, the image is tagged with a yellow label; if gray, it is tagged with a green label.</li>
+                <li>Round-Robin Distribution: The images are distributed among the specified number of designers using a round-robin method, ensuring an even split of images.</li>
+                <li>Tagging: Tags (green or yellow) are applied to the images using macOS AppleScript commands. This allows easy identification of images based on background color.</li>
+                <li>Logging and Feedback: The software keeps track of the number of images processed and the time taken for the operation, providing real-time feedback in the user interface.</li>
             </ol>
-            <h4 class="fw-bold">Accessibility</h4>
-            <p class="text-muted">At the moment, SortImg is exclusively available for users of Saks.com. We're committed to providing our users with the best tools and resources to enhance their experience on our platform.<br><br>Whether you're a Saks.com user looking to streamline your image management process or someone interested in exploring the benefits of SortImg, we invite you to give it a try and see the difference it can make in organizing your image collection!</p>
-            <h4 class="fw-bold">Format Support</h4>
-            <p class="text-muted">SortImg currently supports the detection and sorting of various image file formats, including:<br><br>JPEG (Joint Photographic Experts Group)<br>PNG (Portable Network Graphics)<br>BMP (Bitmap)<br>GIF (Graphics Interchange Format)<br>WEBP (Web Picture)<br>ICO (Icon)<br>PSD (Adobe Photoshop Document) - - Coming in future updates<br>TIFF (Tagged Image File Format) - Coming in future updates<br><br>At the moment, SortImg does not support TIFF images, but we are working on adding this capability in the upcoming updates. Once implemented, SortImg will be able to detect and sort TIFF images along with the other supported formats.</p>
+            <h4 class="fw-bold">Background Calculations</h4>
+            <p class="text-muted">The software checks the background of each image by analyzing a small region of the image. Specifically, it looks at the top-right corner of the image (the last few pixels in that region). The following logic is applied:<br>Whether you're a Saks.com user looking to streamline your image management process or someone interested in exploring the benefits of SortImg, we invite you to give it a try and see the difference it can make in organizing your image collection!</p>
+            <ul>
+                <li>If the pixels in the top-right corner match the color (255, 255, 255), which represents white, the image is considered to have a white background.</li>
+                <li>If the pixel color is close to RGB (128, 128, 128), the image is considered to have a gray background.</li>
+                <li>Images that don't fit into these categories are skipped, and the software doesn't apply any tags to them.</li>
+            </ul>
+            <h4 class="fw-bold">How to Use</h4>
+            <p class="text-muted">Follow these simple steps to use the SplitImg software:</p>
+            <ul>
+                <li>Step 1: Open the application and select the number of designers from the dropdown (up to 15). This will determine how the images are distributed.</li>
+                <li>Step 2: Click the "Run" button to begin the process.</li>
+                <li>Step 3: A file dialog will appear. Select the folder containing the images you want to process.</li>
+                <li>Step 4: The software will begin processing the images. As it works, it will display the number of images processed and the time taken for the task.</li>
+                <li>Step 5: Once the process is complete, you will be notified, and the images will be placed in separate folders for each designer, with appropriate tags applied.</li>
+            </ul>
+            <h4 class="fw-bold">Developer Information</h4>
+            <p class="text-muted">This tool was developed by Karan Khandekar, specifically for Saks Global. It aims to streamline the workflow for designers working on image-based tasks by automating the organization and tagging process.</p>
         </div>
     </div>
     <div class="modal fade" role="dialog" tabindex="-1" id="DocumentationSortImg">
