--- a/downloads.html
+++ b/downloads.html
@@ -65,13 +65,13 @@
                     </div>
                 </div>
                 <div class="col mb-4">
-                    <div><a href="#"><img class="rounded img-fluid shadow w-100 fit-cover" src="assets/img/products/2.jpg" style="height: 250px;"></a>
+                    <div><a href="#"><img class="rounded img-fluid shadow w-100 fit-cover" src="assets/img/products/background.jpeg" style="height: 250px;"></a>
                         <div class="py-4"><span class="badge bg-primary mb-2">MIT Licence</span>
-                            <h4 class="fw-bold">Video to GIF (Coming Soon)</h4>
-                            <p class="text-muted">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
+                            <h4 class="fw-bold">SplitImg</h4>
+                            <p class="text-muted">SplitImg is a powerful image management tool designed to streamline the workflow for designers. This software automates the sorting and tagging of images, ensuring that each designer receives their fair share of tasks. By analyzing background colors and using an efficient round-robin distribution method...</p>
                         </div>
                     </div>
-                    <div class="text-center d-flex justify-content-center align-items-end py-4"><button class="btn btn-primary" type="button">Learn More</button></div>
+                    <div class="text-center d-flex justify-content-center align-items-end py-4"><a class="btn btn-primary" role="button" href="download/SplitImg.html">Learn More</a></div>
                 </div>
             </div>
         </div>
