--- a/downloads.html
+++ b/downloads.html
@@ -57,7 +57,7 @@
             <div class="row row-cols-1 row-cols-md-2 mx-auto" style="max-width: 900px;">
                 <div class="col mb-4">
                     <div><a href="download/ImgSort.html"><img class="rounded img-fluid shadow w-100 fit-cover" src="assets/img/products/SortImg%20Banner.png" style="height: 250px;"></a>
-                        <div class="py-4"><span class="badge bg-primary mb-2">For Saks Only</span>
+                        <div class="py-4"><span class="badge bg-primary mb-2">For Saks Global Only | MIT Licence</span>
                             <h4 class="fw-bold">ImgSort</h4>
                             <p class="text-muted">SortImg is a handy tool designed to help you organize your image collection quickly and effortlessly. With its easy-to-use interface, SortImg lets you sort through your images with ease, whether you're a photography enthusiast, a professional designer, or just someone who loves keeping their files neat and tidy.</p>
                         </div>
@@ -65,8 +65,8 @@
                     </div>
                 </div>
                 <div class="col mb-4">
-                    <div><a href="#"><img class="rounded img-fluid shadow w-100 fit-cover" src="assets/img/products/background.jpeg" style="height: 250px;"></a>
-                        <div class="py-4"><span class="badge bg-primary mb-2">MIT Licence</span>
+                    <div><a href="download/SplitImg.html"><img class="rounded img-fluid shadow w-100 fit-cover" src="assets/img/products/background.jpeg" style="height: 250px;"></a>
+                        <div class="py-4"><span class="badge bg-primary mb-2"><strong>For Saks Global Only |&nbsp;</strong>MIT Licence</span>
                             <h4 class="fw-bold">SplitImg</h4>
                             <p class="text-muted">SplitImg is a powerful image management tool designed to streamline the workflow for designers. This software automates the sorting and tagging of images, ensuring that each designer receives their fair share of tasks. By analyzing background colors and using an efficient round-robin distribution method...</p>
                         </div>
