--- a/download/ImgSort.html
+++ b/download/ImgSort.html
@@ -48,7 +48,7 @@
     </nav>
     <div class="container"><img class="rounded img-fluid shadow w-100 fit-cover" src="../assets/img/products/SortImg%20Banner.png" style="height: 375px;">
         <div class="py-4"><span class="badge bg-primary mb-2">For Saks Global</span>
-            <h4 class="fw-bold">ImgSort</h4>
+            <h1 class="fw-bold">ImgSort</h1>
             <p class="text-muted">SortImg is a handy tool designed to help you organize your image collection quickly and effortlessly. With its easy-to-use interface, SortImg lets you sort through your images with ease, whether you're a photography enthusiast, a professional designer, or just someone who loves keeping their files neat and tidy.</p>
             <div class="row">
                 <div class="col d-flex justify-content-center"><a class="btn btn-primary m-2" role="button" href="saks_sort_img/dmg_download/SortImg.dmg" target="_blank">Download ImgSort (Apple Silicon)</a></div>
@@ -75,7 +75,7 @@
         <div class="modal-dialog modal-xl modal-dialog-scrollable" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title">Documentation: SortImg</h4><button class="btn-close" type="button" aria-label="Close" data-bs-dismiss="modal"></button>
+                    <h4 class="modal-title">Documentation: SplitImg</h4><button class="btn-close" type="button" aria-label="Close" data-bs-dismiss="modal"></button>
                 </div>
                 <div class="modal-body">
                     <p><strong>1) How to use the app?</strong><br>SortImg is a simple yet powerful tool designed to help users sort images based on their background colors. Follow these steps to use the app effectively:</p>
