--- a/download/SplitImg.html
+++ b/download/SplitImg.html
@@ -48,12 +48,13 @@
     </nav>
     <div class="container"><img class="rounded img-fluid shadow w-100 fit-cover" src="../assets/img/products/background.jpeg" style="height: 375px;">
         <div class="py-4"><span class="badge bg-primary mb-2">For Saks Global</span>
-            <h4 class="fw-bold">Split Image</h4>
+            <h1 class="fw-bold">Split Image</h1>
             <p class="text-muted">SplitImg for Designers is a utility application developed for Saks Global. This tool automates the process of organizing, tagging, and distributing images among designers. It assigns color tags based on the background color of the images and ensures a smooth workflow by splitting images into designated folders for each designer.</p>
             <div class="row">
-                <div class="col d-flex justify-content-center"><a class="btn btn-primary m-2" role="button" href="saks_sort_img/dmg_download/SortImg.dmg" target="_blank">Download SplitImg (Apple Silicon)</a></div>
-                <div class="col-md-12 col-lg-6 d-flex justify-content-center"><a class="btn btn-outline-primary m-2" role="button" href="SplitImg/documentation.html" data-bs-target="#DocumentationSortImg" data-bs-toggle="modal">Documentation</a></div>
+                <div class="col d-flex justify-content-center"><a class="btn btn-primary m-2" role="button" href="saks_sort_img/dmg_download/SortImg.dmg" target="_blank" title="Will be available for doenload soon!">Download SplitImg (Apple Silicon)</a></div>
+                <div class="col-md-12 col-lg-6 d-flex justify-content-center"><a class="btn btn-outline-primary m-2" role="button" href="https://karankhandekar.github.io/SplitImg/documentation.html" target="_blank">Documentation</a></div>
             </div>
+            <div class="col mt-4"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/D4mGEKSot6k" width="100%" height="315"></iframe></div>
             <h4 class="fw-bold mt-4">Key Features</h4>
             <ul class="list-group">
                 <li class="list-group-item"><span><span style="color: rgba(255, 255, 255, 0.75);">Supports multiple image formats: PNG, JPEG, BMP, GIF, TIFF</span></span></li>
