--- a/learning/bss-course.html
+++ b/learning/bss-course.html
@@ -50,10 +50,10 @@
         <div class="py-4"><span class="badge bg-primary mb-2">Enrolment</span>
             <h4 class="fw-bold">Website Designing Course in Bootstrap Studio</h4>
             <div class="row">
-                <div class="col-md-6 col-lg-3 d-flex justify-content-center align-items-center"><a class="btn btn-primary m-2" role="button" href="https://altly.in/sQbFp" target="_blank" style="width: 100%;">Udemy</a></div>
-                <div class="col-md-6 col-lg-3 d-flex justify-content-center align-items-center"><a class="btn btn-primary m-2" role="button" href="https://altly.in/KbShL" target="_blank" style="width: 100%;">Wit Reach / Keet Classroom</a></div>
-                <div class="col-md-6 col-lg-3 d-flex justify-content-center align-items-center"><a class="btn btn-primary m-2" role="button" href="https://altly.in/LOWXL" target="_blank" style="width: 100%;">Skill Share</a></div>
-                <div class="col-md-6 col-lg-3 d-flex justify-content-center align-items-center"><a class="btn btn-primary m-2" role="button" href="https://altly.in/u/khandekarkaran/skPLRq-2" target="_blank" style="width: 100%;">Discount</a></div>
+                <div class="col-md-6 col-lg-3 d-flex justify-content-center align-items-center"><a class="btn btn-primary m-2" role="button" href="https://www.udemy.com/course/bootstrap-studio-design-website-with-typing-only-10-percent-code/" target="_blank" style="width: 100%;">Udemy</a></div>
+                <div class="col-md-6 col-lg-3 d-flex justify-content-center align-items-center"><a class="btn btn-primary m-2" role="button" href="https://witreach.com/course-details/14/course/Bootstrap-Studio-6.3-Course-3-Static-and-1-Dynamic-Project" target="_blank" style="width: 100%;">Wit Reach</a></div>
+                <div class="col-md-6 col-lg-3 d-flex justify-content-center align-items-center"><a class="btn btn-primary m-2" role="button" href="https://www.skillshare.com/en/classes/bootstrap-studio-tutorial-version-6-0-learn-bootstrap-studio/1074945763?via=Selected-SearchSuggestion" target="_blank" style="width: 100%;">Skill Share</a></div>
+                <div class="col-md-6 col-lg-3 d-flex justify-content-center align-items-center"><a class="btn btn-primary disabled m-2" role="button" href="https://altly.in/u/khandekarkaran/skPLRq-2" target="_blank" style="width: 100%;">Discount</a></div>
             </div>
             <h4 class="fw-bold">Description</h4>
             <p class="text-muted">This course is designed in such a way that anyone who has a basic knowledge of HTML CSS can enroll in this course and become a website designer. In this course, I have given a focus on all those elements which a website designer needs in his/her professional website designing journey. Right from color selecting UI, to UX, everything is covered in this course.<br><br>In this course you will learn the following:</p>
