Update in contact form
Changes in contact form

--- a/contact.html
+++ b/contact.html
@@ -261,6 +261,7 @@
                     <div class="leave-comments-area">
                       <div class="comments-box">
                         <form id="contact-form" action="assets/mail.php" method="POST">
+                          <input type="hidden" name="ChooseYourFocus" id="hiddenChooseYourFocus">
                           <div class="row gx-3">
                             <div class="col-md-6">
                               <div class="mb-4">
