page name update

--- a/about.html
+++ b/about.html
@@ -617,13 +617,13 @@
                         <div class="col-lg-6">
                           <div class="article-publications-item">
                             <div class="image">
-                              <a href="SplitImg.html" class="d-block w-100">
+                              <a href="splitImg.html" class="d-block w-100">
                                 <img src="assets/img/blog/splitImg.jpeg" alt="SpliImg" class="img-fluid w-100">
                               </a>
-                              <a href="SplitImg.html" class="tags">Development</a>
+                              <a href="splitImg.html" class="tags">Development</a>
                             </div>
                             <div class="text">
-                              <a href="SplitImg.html" class="title">SplitImg is a powerful image management tool designed to...</a>
+                              <a href="splitImg.html" class="title">SplitImg is a powerful image management tool designed to...</a>
                               <ul class="list-unstyled">
                                 <li>15 min read</li>
                                 <li>Nov 28, 2024</li>
