--- a/splitImg.html
+++ b/splitImg.html
@@ -284,7 +284,7 @@
                         </li>
                         <li>Displays the number of images processed and the time taken for the task
                         </li>
-                        <li>CSimple UI for quick and efficient image SplitImg
+                        <li>CSimple UI for quick and efficient image SplitImg 
                        
                       </ul>
                       
@@ -356,7 +356,7 @@
                           <div class="col-md-6">
                             <div class="article-publications-item">
                               <div class="image">
-                                <a href="SplitImg.html" class="d-block w-100">
+                                <a href="splitImg.html" class="d-block w-100">
                                   <img src="assets/img/blog/SortImg.png" alt="SortImg" class="img-fluid w-100">
                                 </a>
                                 <a href="SortImg.html" class="tags">Development</a>
