--- a/tools-tech.html
+++ b/tools-tech.html
@@ -280,13 +280,13 @@
                         <div class="col-xl-6 col-lg-4 col-md-6">
                           <div class="article-publications-item">
                             <div class="image">
-                              <a href="SplitImg.html" class="d-block w-100">
+                              <a href="splitImg.html" class="d-block w-100">
                                 <img src="assets/img/blog/splitImg.jpeg" alt="SplitImg" class="img-fluid w-100">
                               </a>
-                              <a href="SplitImg.html" class="tags">Saks Global</a>
+                              <a href="splitImg.html" class="tags">Saks Global</a>
                             </div>
                             <div class="text">
-                              <a href="SplitImg.html" class="title">SplitImg is a powerful image management tool designed to...</a>
+                              <a href="splitImg.html" class="title">SplitImg is a powerful image management tool designed to...</a>
                               <ul class="list-unstyled">
                                 <li>Free Tool</li>
                                 <li>Nov 28, 2024</li>
