--- a/about.html
+++ b/about.html
@@ -634,17 +634,16 @@
                         <div class="col-lg-6">
                           <div class="article-publications-item">
                             <div class="image">
-                              <a href="article.html" class="d-block w-100">
-                                <img src="assets/img/blog/blog-img-3.jpg" alt="blog-img-3" class="img-fluid w-100">
+                              <a href="todo-try-now.html" class="d-block w-100">
+                                <img src="assets/img/blog/todo.png" alt="blog-img-3" class="img-fluid w-100">
                               </a>
-                              <a href="article.html" class="tags">Development</a>
+                              <a href="todo-try-now.html" class="tags">Development</a>
                             </div>
                             <div class="text">
-                              <a href="article.html" class="title">Want To Upgrade Your Brain? Stop Doing These 7
-                                Things</a>
+                              <a href="todo-try-now.html" class="title">Your code seems to be a robust implementation of a todo...</a>
                               <ul class="list-unstyled">
-                                <li>15 min read</li>
-                                <li>Nov 6, 2023</li>
+                                <li>Free Tool</li>
+                                <li>Nov 29, 2024</li>
                               </ul>
                             </div>
                           </div>
