GitHun Link Updated

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                         <li><a href="https://www.instagram.com/karankhandekar/"><i class="fab fa-instagram"></i></a></li>
                         <li><a href="https://www.linkedin.com/in/karan-khandekar/"><i class="fab fa-linkedin"></i></a></li>
                         <li><a href="https://twitter.com/KaranKhandekar2"><i class="fab fa-twitter"></i></a></li>
-                        <li><a href="https://www.karankhandekar.github.io"><i class="fab fa-github"></i></a></li>
+                        <li><a href="https://karankhandekar.github.io"><i class="fab fa-github"></i></a></li>
                         <li><a href="https://www.youtube.com/@KaranKhandekar"><i class="fab fa-youtube"></i></a></li>
                         <li><a href="https://discord.gg/3B6rHKvV8H"><i class="fab fa-discord"></i></a></li>
 
