--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -6,6 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Karan Khandekar Portfolio Details| Creative Manager & Software Developer</title>
   <meta name="description" content="Welcome to Karan Khandekar's portfolio – Creative Manager, Software Developer, and Entrepreneur. Explore my work in design, coding, and innovation.">
+  <script type="application/ld+json">
+    {
+        "@context": "http://schema.org",
+        "@type": "WebSite",
+        "name": "Karan Khandekar",
+        "url": "https://karankhandekar.github.io"
+    }
+</script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.svg">
