--- a/todo.html
+++ b/todo.html
@@ -13,6 +13,14 @@
     <!-- PWA Meta Tags -->
     <meta name="theme-color" content="#ffffff">
     <meta name="description" content="A powerful todo list application to manage your tasks">
+    <script type="application/ld+json">
+        {
+            "@context": "http://schema.org",
+            "@type": "WebSite",
+            "name": "Karan Khandekar",
+            "url": "https://karankhandekar.github.io"
+        }
+    </script>
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="To Do | Wit Reach">
