Added video in Split Image 2

--- a/splitImg.html
+++ b/splitImg.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>SplitImg by Karan Khandekar | Creative Manager & Software Developer</title>
+  <title>SplitImg 2 by Karan Khandekar | Creative Manager & Software Developer</title>
   <meta name="description" content="Welcome to Karan Khandekar's portfolio – Creative Manager, Software Developer, and Entrepreneur. Explore my work in design, coding, and innovation.">
   <script type="application/ld+json">
     {
@@ -270,7 +270,7 @@
                       <li>Developed for Saks Global</li>
                     </ul>
                     <div class="article-details-text">
-                      <h3 class="main-title">Split Image</h3>
+                      <h3 class="main-title">Split Image 2</h3>
                       <blockquote>
                         <p>
                           " SplitImg for Designers is a utility application developed for Saks Global. This tool automates the process of organizing, tagging, 
@@ -278,6 +278,10 @@
                           splitting images into designated folders for each designer. "
                         </p>
                       </blockquote>
+                      <div class="text-center">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/AYhe9qclezo?si=hSA1FEF2CypZpESJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                      </div>
+                      
                       
                       <h3 class="main-title inner-title">Developer Information</h3>
                       <p>This tool was developed by Karan Khandekar, specifically for Saks Global. It aims to streamline the workflow for designers working on image-based tasks by automating the organization and tagging process.
