--- a/about.html
+++ b/about.html
@@ -532,7 +532,7 @@
                                     <path d="M6.80234 12L3.40234 17.89L7.00034 17.657L8.59834 20.889L11.9983 15"
                                       stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
                                   </svg>
-                                  Limetime Access
+                                  Lifetime Access
                                 </h4>
                               </div>
                               <div class="project-btn">
